# gamba

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  defect-stdlibcpp-zip.cpp
bench/: examples.txt  gamba_run.sh  julia_run.sh  magma_run.sh  maple_run.sh  msolve_run.sh  run_benchmark.sh
cmake/: CheckGit.cmake  dev-mode.cmake  install-rules.cmake  variables.cmake
examples/: KLYZ12-15.txt  KLYZ12-2.txt  KLYZ12-31.txt  KLYZ13-15.txt  KLYZ13-2.txt  KLYZ13-31.txt  KLYZ22-15.txt  KLYZ22-2.txt  KLYZ22-31.txt  KLYZ23-15.txt  KLYZ23-2.txt  KLYZ23-31.txt  RK_4_4-15.txt  RK_4_4-16.txt  RK_4_4-2.txt  RK_4_4-3.txt  RK_4_4-31.txt  RK_4_4-8.txt  RK_6_6-15.txt  RK_6_6-31.txt  alea6-15.txt  bayes148-15.txt  branch_2_3-15.txt  branch_4_6_7-15.txt  cp_d_3_n_4_p_2-15.txt  cp_d_3_n_4_p_2-2.txt  cp_d_3_n_4_p_2-31.txt  cp_d_3_n_5_p_2-15.txt  cp_d_3_n_5_p_2-2.txt  cp_d_3_n_5_p_2-31.txt  cp_d_3_n_6_p_2-15.txt  cp_d_3_n_6_p_2-2.txt  cp_d_3_n_6_p_2-31.txt  cp_d_3_n_6_p_6-15.txt  cp_d_3_n_6_p_6-31.txt  cp_d_3_n_7_p_2-15.txt  cp_d_3_n_7_p_2-31.txt  cp_d_3_n_7_p_7-15.txt  cp_d_3_n_7_p_7-31.txt  cp_d_3_n_8_p_2-15.txt  (+244 more)
source/: allocator.hpp  basis.hpp  container.hpp  debug.cpp  debug.hpp  divmask.hpp  f4.cpp  f4.hpp  field.hpp  flat_set.hpp  gamba.cpp  gamba.hpp  getRSS.cpp  getRSS.hpp  git_version.cpp.in  git_version.h  io.cpp  io.hpp  main.cpp  matrix.hpp  monomial.hpp  montgomery.hpp  order.hpp  params.cpp  params.hpp  profile.cpp  profile.hpp  reduce.hpp  spair.hpp  stats.cpp  stats.hpp  update.hpp  utils.hpp
test/: CMakeLists.txt  magma_output.sh  test_error.sh  test_output.sh
test/results/: henrion6-2.error.txt
